# Proyecto_soa

./: CMakeLists.txt  calculations.cpp  calculations.hpp  sim-soa.cpp  sim-soa.hpp
